# cursor-error-learner

./: .gitignore  CHANGELOG.md  CursorPrompt.md  README.md  SECURITY.md  cursor.json  pyproject.toml  pytest.ini  setup.py
cli/: cli.py
examples/: demo_app.py
src/error_learner/: __init__.py  analyzer.py  core.py  cursor_integration.py  extension.py  utils.py
test_venv/: pyvenv.cfg
tests/: __init__.py  test_analyzer.py  test_core.py  test_cursor_integration.py  test_demo.py  test_extension.py  test_utils.py
